Fix: Channel switcher and RSS feed invisible

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -780,7 +780,6 @@ body.dark-theme a.pure-button {
 /* CLEANED UP CLUTTER */
 .vjs-overlay-background,
 .ion-logo-youtube,
-.pure-g.h-box > .pure-u-1-3,
 #watch-on-youtube,
 #wilson,
 #dislikes,
